# kv_server

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.org  docker-compose.yaml  flake.nix
config/: main_sample.toml
docs/: api.apib
examples/: lambda.rs  playground.rs  standalone.rs
migrations/2022-02-22-091824_create_entities/: up.sql
migrations/2022-02-22-091824_create_kv/: down.sql
migrations/2022-02-28-092508_add_persona_to_kvs/: down.sql  up.sql
migrations/2022-03-01-102817_add_kv_chains/: down.sql  up.sql
migrations/2022-03-10-080942_add_created_updated_at/: down.sql  up.sql
migrations/2022-03-10-083435_add_signature_payload_to_kv_chains/: down.sql  up.sql
migrations/2022-05-09-041000_remove_platform_identity_unique_index/: down.sql  up.sql
migrations/2023_08_01-add_arewave_id/: down.sql  up.sql
migrations/2023_08_01-add_arewave_id_to_kv_chains/: down.sql  up.sql
src/: lib.rs  schema.rs
src/config/: env.rs  mod.rs
src/controller/: healthz.rs  hello.rs  mod.rs  payload.rs  query.rs  query_by_identity.rs  upload.rs
src/controller/lambda/: mod.rs
src/crypto/: es256.rs  mod.rs  secp256k1.rs  util.rs
src/error/: mod.rs
src/model/: kv.rs  mod.rs
src/model/arweave/: mod.rs  tests.rs
src/model/kv/: mod.rs  tests.rs
src/model/kv_chains/: mod.rs  tests.rs
src/proof_client/: mod.rs  tests.rs
src/types/: mod.rs  subkey.rs
src/util/: mod.rs
